--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Contact Us</h1>
     <div class="a">
         <div class="b">
-         <form action="">
+         <form action="#">
                 
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="First name..">
