--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
 </div>
 <div id="loading">
-    <h1 id=txt>Loading...........</h1>
-    <h1 id=txt1>Loading...........</h1>
+    <h1 id=txt>Loading</h1>
+    <h1 id=txt1>Loading</h1>
 </div>
 </body>
 <script>
